<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="239dp"
        android:layout_height="31dp"
        android:gravity="center_horizontal"

        android:text="@string/textview3"
        android:textAlignment="center"
        android:textColor="#E60D0D"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/horizontalScrollView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="412dp"
        android:layout_height="334dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:paddingTop="160dp"
        android:paddingBottom="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="0dp">

            <ImageView
                android:id="@+id/imageView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/todo1"
                android:paddingTop="0dp"
                android:paddingBottom="20dp"
                app:srcCompat="@drawable/eds" />

            <ImageView
                android:id="@+id/imageView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/todo2"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                app:srcCompat="@drawable/ews" />

            <ImageView
                android:id="@+id/imageView18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/todo3"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                app:srcCompat="@drawable/fws" />

            <ImageView
                android:id="@+id/imageView19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/todo4"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                app:srcCompat="@drawable/gws" />

            <ImageView
                android:id="@+id/imageView20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/todo5"
                app:srcCompat="@drawable/xws" />

            <ImageView
                android:id="@+id/imageView21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/todo6"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                app:srcCompat="@drawable/zws" />


        </LinearLayout>
    </ScrollView>

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="471dp"
        android:layout_height="234dp"
        android:layout_marginTop="56dp"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <ImageView
                android:id="@+id/imageView36"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/todoa"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                app:srcCompat="@drawable/eds" />

            <ImageView
                android:id="@+id/imageView33"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/todob"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                app:srcCompat="@drawable/ews" />

            <ImageView
                android:id="@+id/imageView38"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/todoc"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                app:srcCompat="@drawable/xws" />

            <ImageView
                android:id="@+id/imageView37"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/todod"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                app:srcCompat="@drawable/zws" />

            <ImageView
                android:id="@+id/imageView35"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/todoe"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                app:srcCompat="@drawable/gws" />

            <ImageView
                android:id="@+id/imageView34"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/todof"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                app:srcCompat="@drawable/fws" />
        </LinearLayout>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="221dp"
        android:layout_height="33dp"
        android:layout_marginTop="17dp"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:text="@string/vertical_scroll"

        android:textAlignment="center"
        android:textColor="#E60C0C"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>